<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="custom_weekdays">
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
        <item> </item>
    </string-array>
    <string name="app_name">Worker</string>
    <string name="home">Home</string>
    <string name="norm_title">Norm</string>
    <string name="holidays_title">Holidays</string>
    <string name="workhours_title">Work hours</string>
    <string name="overtimehours_title">Overtime hours</string>
    <string name="salary_title">Salary</string>
    <string name="settings_title">Settings</string>

    <string name="settings_importing">Importing...</string>
    <string name="settings_import">Import</string>
    <string name="settings_import_text">Are you sure you want to import data from Norm ?</string>
    <string name="button_yes">Yes</string>
    <string name="text_account">Account</string>
    <string name="text_choseAccount">Choose a account to import into</string>
    <string name="account_no2">Account 2</string>
    <string name="account_no1">Account 1</string>
    <string name="button_no">No</string>
    <string name="text_error">Error</string>
    <string name="text_needtocratebackup">You need to create a backup in Norm first</string>
    <string name="text_ok">Ok</string>
    <string name="text_deleting">Deleting</string>
    <string name="text_areyousure">Are you sure you want to delete the record ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>

    <string name="text_salary">Salary</string>

    <string name="button_ok">Ok</string>
    <string name="text_used">Used</string>
    <string name="text_unused">Unused</string>
    <string name="text_paid">Paid</string>
    <string name="text_date">Date</string>
    <string name="text_data">Data</string>
    <string name="text_starthour">Start hour</string>
    <string name="text_endhour">End hour</string>
    <string name="text_name">Name</string>
    <string name="text_job">Job</string>
    <string name="text_norm">Norm</string>
    <string name="text_holidays">Holidays</string>
    <string name="text_workhours">Work hours</string>
    <string name="text_overhours">Overtime hours</string>
    <string name="text_advmode">Advanced mode</string>
    <string name="text_pph">Payment per hour</string>
    <string name="text_workedhours">Worked hours</string>
    <string name="text_hours">Hours</string>
    <string name="text_tax">Tax</string>
    <string name="text_pi1">Pension insurance [%]</string>
    <string name="text_hi">Health insurance [%]</string>
    <string name="text_tax1">Tax (I) [%]</string>
    <string name="text_tax2">Tax (II) [%]</string>
    <string name="text_tax3">Tax (III) [%]</string>
    <string name="text_additions">Additions</string>
    <string name="text_coef">Coefficient</string>
    <string name="text_coef2">Coefficient</string>
    <string name="text_dedamount">Deduction amount</string>
    <string name="text_perded">Personal deduction</string>
    <string name="text_edit">Edit</string>
    <string name="text_import">Import</string>
    <string name="text_card_edit">Edit</string>
    <string name="text_card_delete">Delete</string>
    <string name="text_filter">Filter</string>
    <string name="interventions_title">Interventions</string>
    <string name="text_sickleave_title">Sick leave</string>
    <string name="filter_asc">Ascending</string>
    <string name="filter_des">Descending</string>
    <string name="filter_sorting">Sorting</string>
    <string name="filter_year">Year filter</string>
    <string name="filter_month">Month filter</string>
    <string name="filter_disable">Disable filter</string>
    <string name="filter_auto">Automatic filtering</string>
    <string name="filtetr_text_year">Year</string>
    <string name="filter_text_month">Month</string>
    <string name="text_sickleavehours">Sick leave hours</string>
    <string name="text_interventionhours">Intervention hours</string>
    <string name="no_data">No data</string>
    <string name="text_storage_perm">Storage permission</string>
    <string name="text_storage_perm2">Storage permission are needed to allow personification</string>
    <string name="text_acc_edit_1">Edit account</string>
    <string name="text_acc_edit_2">in settings</string>
    <string name="calendar_title">Calendar</string>
    <string name="settings_norm_found"><![CDATA[Norm status : <b>Found</b>]]></string>
    <string name="settings_db_bk_1"><![CDATA[Database backup : <b>Found</b>]]></string>
    <string name="settings_db_bk_2"><![CDATA[Database backup : <b>Not found</b>]]></string>
    <string name="text_home_1"><![CDATA[Average norm : <b>%1$s</b><br>Used holidays : <b>%2$s</b><br>Worked hours : <b>%3$s</b><br>Sick leave hours : <b>%4$s</b>]]></string>
    <string name="text_home_2"><![CDATA[Overhours paid : <b>%1$s</b><br>Overhours used : <b>%2$s</b><br>Overhours unused : <b>%3$s</b><br>Intervention hours : <b>%4$s</b>]]></string>
    <string name="salary_bruto_neto">Bruto : %1$s €\nNeto : %2$s €</string>
    <string name="text_bruto_neto_2">Bruto : %1$s €\nNeto : %2$s €</string>
    <string name="text_brutonetto">Bruto : %1$s €\nNeto : %2$s €</string>
    <string name="test_home_paid"><![CDATA[Paid (%1$s)<br>%2$s - %3$s]]></string>
    <string name="text_home_used"><![CDATA[Used (%1$s)<br>%2$s - %3$s]]></string>
    <string name="text_home_unused">Unused %1$s - %2$s</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_export">Export</string>
    <string name="settings_exporting">Exporting</string>
    <string name="Backup_exists"><![CDATA[Backup : <b>Found</b>]]></string>
    <string name="Backup_not_exists"><![CDATA[Backup : <b>Not found</b>]]></string>
    <string name="slide_1">Tracking</string>
    <string name="slide_1_subtitle">Are you just tired of tracking all your work related parameters ?</string>
    <string name="slide_2">Simple</string>
    <string name="slide_2_subtitle">Wouldn\'t it be amazing if you could do all that on your phone ?</string>
    <string name="slide_3">Worker</string>
    <string name="slide_3_subtitle">Well, now you can. Welcome to Worker !</string>


</resources>
